# kalshi-bot

./: .gitignore  README.md  cloud-startup.sh  export_market_csvs.py  firebase_logger.py  kalshi_orderbook_collector.py  main.py  market_discovery.py  plot_all_markets.py  plot_market.py  plot_price.py  price_tracker.py  pyproject.toml  scrap.py  setup.sh  split_events.py  trading_bot.py  true_prob.py
