[project]
name = "kalshi-btc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=25.1.0",
    "aiohttp>=3.13.5",
    "cryptography>=46.0.7",
    "matplotlib>=3.10.8",
    "python-dotenv>=1.2.2",
    "requests>=2.33.1",
    "websockets>=16.0",
]
