[project]
name = "kalshi-btc"
version = "0.1.0"
description = "Kalshi BTC 15-minute prediction market trading bot"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.13.5",
    "cryptography>=46.0.7",
    "firebase-admin>=6.5.0",
    "python-dotenv>=1.2.2",
    "websockets>=16.0",
]
